# vcpkgdemo

./: CMakeLists.txt  README.md
vcpkgdemo/: CMakeLists.txt  vcpkgdemo.cpp  vcpkgdemo.h
